--- a/craveo/package.json
+++ b/craveo/package.json
@@ -17,9 +17,10 @@
   },
   "dependencies": {
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-router": "^7.11.0",
+    "react-router-dom": "^7.11.0"
   },
-
   "browserslist": [
     "last 2 versions"
   ]
